3rd/4c5a780a4efc16547ea2eabdc5713f998753381a.txt
#9017
libavformat/gifdec.c:519: error: UNINITIALIZED_VALUE
  The value read from ret was never initialized.

libavformat/gifdec.c:519:5: 
517.     }
518.   the_end:
519.     return ret;
         ^
520. }
521. 
